syntax = "proto3";

package anychat.push;

option go_package = "github.com/anychat/server/api/proto/push;pushpb";

// PushService 推送服务
// 负责向离线用户发送 APNs / FCM 等系统推送通知（基于极光推送 JPush）
service PushService {
  // SendPush 向指定用户列表发送推送通知
  // 供其他服务直接调用，主要入口为 NATS 事件订阅
  rpc SendPush(SendPushRequest) returns (SendPushResponse);
}

// SendPushRequest 推送请求
message SendPushRequest {
  // 目标用户 ID 列表
  repeated string user_ids = 1;
  // 推送标题
  string title = 2;
  // 推送正文
  string content = 3;
  // 推送类型: message / friend_request / group_invite / mention / call
  string push_type = 4;
  // 附加数据（键值对），客户端根据业务处理
  map<string, string> extras = 5;
}

// SendPushResponse 推送响应
message SendPushResponse {
  // 成功推送的设备数
  int32 success_count = 1;
  // 失败推送的设备数
  int32 failure_count = 2;
  // 极光推送消息 ID
  string msg_id = 3;
}
